<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="eu.mcomputing.mobv.zadanie.ui.viewmodels.auth.LoginViewModel"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <!-- Page Heading -->
    <TextView
        android:id="@+id/textView"
        style="@style/heading1"
        android:text="@string/welcome_back"
        app:layout_constraintBottom_toTopOf="@+id/subtitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <!-- Subtitle Text -->
    <TextView
        android:id="@+id/subtitleText"
        style="@style/description1"
        android:text="@string/log_in_to_your_account"
        app:layout_constraintBottom_toTopOf="@+id/loginUsernameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginUsernameLayout"
        style="@style/customTextField"
        android:hint="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/loginPasswordLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginUsernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.username}"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Input Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordLayout"
        style="@style/customTextField"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginUsernameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.password}"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Login Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/primaryBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:onClick="@{() -> viewModel.onLoginClicked()}"
        app:layout_constraintBottom_toTopOf="@+id/forgetPasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPasswordLayout" />

    <!-- Forget Password Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgetPasswordButton"
        style="@style/textButton"
        android:text="@string/forget_password"
        app:layout_constraintBottom_toTopOf="@id/registerLoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <!-- Register Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerLoginButton"
        style="@style/textButton"
        android:text="@string/don_t_have_an_account_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgetPasswordButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>