<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="eu.mcomputing.mobv.zadanie.ui.viewmodels.auth.ForgetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <TextView
            android:id="@+id/textView"
            style="@style/heading1"
            android:text="@string/password_reset"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/forgetPasswordDescriptionTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/forgetPasswordDescriptionTextView"
            style="@style/description1"
            android:layout_marginTop="8dp"
            android:text="@string/password_reset_subtitle"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintBottom_toTopOf="@id/forgotPasswordEmailLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Email Input Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgotPasswordEmailLayout"
            style="@style/customTextField"
            android:hint="@string/email"
            app:layout_constraintTop_toBottomOf="@id/forgetPasswordDescriptionTextView"
            app:layout_constraintBottom_toTopOf="@id/sendResetButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgotPasswordEmailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Send Reset Link Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendResetButton"
            style="@style/primaryBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/send_reset_link"
            android:onClick="@{() -> viewModel.onResetClick()}"
            app:layout_constraintTop_toBottomOf="@id/forgotPasswordEmailLayout"
            app:layout_constraintBottom_toTopOf="@id/backToLoginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backToLoginButton"
            style="@style/textButton"
            android:text="@string/back_to_login"
            app:layout_constraintTop_toBottomOf="@id/sendResetButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
